--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,8 +42,9 @@
 
 - import_tasks: domain_config.yml
 
-- name: Include dns-01-lexicon.yml
-  include_tasks: dns-01-lexicon.yml
+- name: Include dns-01-cfhookbash.yml
+  #include_tasks: dns-01-lexicon.yml
+  include_tasks: dns-01-cfhookbash.yml
   when:
     - dehydrated_use_lexicon
 
